rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__multiple_declarations_error.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (multiple_declarations_error),\n\"a = 1;\n     a = b = 3;\n     a = b = 3;\")"
---
error: Not a valid assignment target.
  ┌─ multiple_declarations_error:2:6
  │
2 │      a = b = 3;
  │      ^^^^^ Not a valid assignment target.

error: Not a valid assignment target.
  ┌─ multiple_declarations_error:3:6
  │
3 │      a = b = 3;
  │      ^^^^^ Not a valid assignment target.
